Bug #27663 Missmatched free/delete in listObjects
Submitted: 5 Apr 2007 9:45 Modified: 10 Apr 2007 15:11
Reporter: Jonas Oreland
Status: Closed
Category:Server: NDBAPI Severity:S3 (Non-critical)
Version: OS:Any
Assigned to: Jonas Oreland Target Version:

[5 Apr 2007 9:45] Jonas Oreland
Description:
.

How to repeat:
.

Suggested fix:
.
[5 Apr 2007 9:46] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/23872

ChangeSet@1.2135, 2007-04-05 09:46:01+02:00, jonas@perch.ndb.mysql.com +1 -0
  ndb - bug#27663 (wl2325-5.0)
    fix free/delete problem
[5 Apr 2007 9:57] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/23874

ChangeSet@1.2483, 2007-04-05 09:57:01+02:00, jonas@perch.ndb.mysql.com +1 -0
  ndb - bug#27663 (telco-6.1)
      fix free/delete problem
[5 Apr 2007 10:05] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/23876

ChangeSet@1.2521, 2007-04-05 10:05:05+02:00, jonas@perch.ndb.mysql.com +1 -0
  ndb - bug#27663 (51-telco)
        fix free/delete problem
[5 Apr 2007 10:08] Jonas Oreland
pushed to telco-6.1, 51-telco and drop5/6
[7 Apr 2007 10:22] Tomas Ulin
telco 6.1.7, 6.2.1
[10 Apr 2007 15:11] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented in telco-6.1.7 and telco-6.2.1 changelogs.