ndb - bug#27663 (51-telco)       fix free/delete problem